# Last-update-V3

real_estate_toolkit/: pyproject.toml
real_estate_toolkit/src/real_estate_toolkit/: main.py  mainV1.py
real_estate_toolkit/src/real_estate_toolkit/agent_based_model/: consumers.py  house_market.py  houses.py  simulation.py
real_estate_toolkit/src/real_estate_toolkit/analytics/: exploratory.py
real_estate_toolkit/src/real_estate_toolkit/data/: cleaner.py  descriptor.py  loader.py
real_estate_toolkit/src/real_estate_toolkit/ml_models/: predictor.py
real_estate_toolkit/src/real_estate_toolkit/ml_models/outputs/: submission.csv
